fix: scroll active message into view when threads are collapsed

--- a/assets/css/nested-message.scss
+++ b/assets/css/nested-message.scss
@@ -26,6 +26,7 @@
     display: inline;
     border: 0;
     float: right;
+    cursor: pointer;
   }
 }
 
